--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import "https://fonts.googleapis.com/css?family=Rubik+One";
-
 body,
 html {
   margin: 0;
@@ -10,7 +9,8 @@ html {
   background: linear-gradient(to left, #e53935, #e35d5b);
 }
 
-%test {
+.button::after,
+.button::before {
   position: absolute;
   content: "";
   transition: all 0.5s;
@@ -30,40 +30,34 @@ html {
   font-size: 4vw;
   transition: all 0.5s;
   background-color: #3498db;
-
-  &::before {
-    @extend %test;
-    bottom: -15px;
-    height: 15px;
-    width: 100%;
-    left: 8px;
-    transform: skewX(45deg);
-    background-color: darken(#3498db, 20%);
-  }
-
-  &::after {
-    @extend %test;
-    right: -15px;
-    height: 100%;
-    width: 15px;
-    bottom: -8px;
-    transform: skewY(45deg);
-    background-color: darken(#3498db, 30%);
-  }
-
-  &:active {
-    margin-left: 10px;
-    margin-top: 10px;
-    &::before {
-      bottom: -5px;
-      height: 5px;
-      left: 3px;
-    }
-
-    &::after {
-      right: -5px;
-      width: 5px;
-      bottom: -3px;
-    }
-  }
+}
+.button::before {
+  bottom: -15px;
+  height: 15px;
+  width: 100%;
+  left: 8px;
+  transform: skewX(45deg);
+  background-color: #196090;
+}
+.button::after {
+  right: -15px;
+  height: 100%;
+  width: 15px;
+  bottom: -8px;
+  transform: skewY(45deg);
+  background-color: #124364;
+}
+.button:active {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.button:active::before {
+  bottom: -5px;
+  height: 5px;
+  left: 3px;
+}
+.button:active::after {
+  right: -5px;
+  width: 5px;
+  bottom: -3px;
 }
